Start version 0.0.2-SNAPSHOT.

--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,5 @@
     <version>0.0.22</version>
   </parent>
 	<artifactId>jsand-common</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 </project>
